# autobuild

./: README.md  buildsettings.json  pyproject.toml  requirements.txt  script.py
.github/workflows/: build.yml  install_badge.yml  package_check.yml  tests.yml
autobuilding/: READTHIS.txt  buildsettings.json  pyproject.toml  script.py
autobuilding/src/autobuilding/: __init__.py
autobuilding/src/autobuilding.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
