[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobuilding"
version = "1.0.0"
description = "Auto-building tool for python modules."
authors = [{name="wirnty", email="skedovichusjdj@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
